force-app/main/default/objects/FieloPLT__Point__c/FieloPLT__Point__c.object-meta.xml
<CustomObject>
    <description>Points granted to Members as a result of performing a specific Action.</description>
    <label>Point</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>