force-app/main/default/objects/FieloPLT__Point__c/fields/Ano_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Ano_Fiscal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ano fiscal relacionado ao registro de ponto.</description>
    <inlineHelpText>Ano fiscal relacionado ao registro de ponto.</inlineHelpText>
    <label>Ano Fiscal - OLD</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>