force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__ActionDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ActionDescription__c</fullName>
    <description>Record name which generated the Point and its related Transaction.</description>
    <inlineHelpText>Record name which generated the Point and its related Transaction.</inlineHelpText>
    <label>Action Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>