force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Balance__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Balance__c</fullName>
    <description>Number of available Points.</description>
    <formula>IF ( AND(FieloPLT__TotalPoints__c &gt; 0,  ISPICKVAL( FieloPLT__Status__c , &apos;Approved&apos;) ) , FieloPLT__TotalPoints__c - FieloPLT__UsedPoints__c -  FieloPLT__ExpiredPoints__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of available Points.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>