force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <formula>FieloPLT__ChallengeReward__r.FieloPLT__Challenge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge</label>
    <type>Text</type>
</CustomField>