force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpirationDate__c</fullName>
    <description>Date when Points expire. Date is automatically set when Point is generated.</description>
    <inlineHelpText>Date when Points expire. Date is automatically set when Point is generated.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>