force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__ExpiredPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpiredPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Points that have already expired and cannot be used.</description>
    <inlineHelpText>Points that have already expired and cannot be used.</inlineHelpText>
    <label>Expired Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>