force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member who obtained the Points.</description>
    <inlineHelpText>Member who obtained the Points.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>