force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__MemberBalance__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MemberBalance__c</fullName>
    <description>Number of available Points which belong to a specific Member.</description>
    <inlineHelpText>Number of Points available for the Member.</inlineHelpText>
    <label>Member Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>