force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__PointType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific Point Type for a particular Point.</description>
    <inlineHelpText>Choose the specific Point Type for this Point.</inlineHelpText>
    <label>Point Type</label>
    <referenceTo>FieloPLT__PointType__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>