force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Promotion__c</fullName>
    <formula>FieloPLT__Rule__r.FieloPLT__Promotion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion</label>
    <type>Text</type>
</CustomField>