force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Redemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Redemption in which Points were spent on.</description>
    <inlineHelpText>Redemption in which Points were spent on.</inlineHelpText>
    <label>Redemption</label>
    <referenceTo>FieloPLT__Redemption__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>