force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule which generated the Point.</description>
    <inlineHelpText>Rule which generated the Point.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>FieloPLT__Rule__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>