force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__TotalPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TotalPoints__c</fullName>
    <description>Total number of Points.</description>
    <inlineHelpText>Total number of Points.</inlineHelpText>
    <label>Total Points</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>