force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction which granted the Point.</description>
    <inlineHelpText>Transaction which granted the Point.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>FieloPLT__Transaction__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>