force-app/main/default/objects/FieloPLT__Point__c/fields/FieloPLT__UsedPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UsedPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Points used in the Transaction.</description>
    <inlineHelpText>Number of Points used in the Transaction.</inlineHelpText>
    <label>Used Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>