force-app/main/default/objects/FieloPLT__Point__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relacionamento com a meta do participante, preenchido via process builder Atualiza Ano Fiscal em Pontos - nova estrutura</description>
    <label>Ano Fiscal</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Betcoins</relationshipLabel>
    <relationshipName>Betcoins</relationshipName>
    <type>Lookup</type>
</CustomField>