force-app/main/default/objects/FieloPLT__Point__c/fields/V_DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>V_DataCriacao__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação</label>
    <type>Date</type>
</CustomField>