force-app/main/default/objects/FieloPLT__Point__c/fields/V_DataTexto__c.field-meta.xml
<CustomField>
    <fullName>V_DataTexto__c</fullName>
    <formula>TEXT(DAY(V_DataCriacao__c))+&apos;/&apos;+ TEXT(MONTH(V_DataCriacao__c))+&apos;/&apos; + TEXT(YEAR(V_DataCriacao__c))</formula>
    <label>Data Texto</label>
    <type>Text</type>
</CustomField>