force-app/main/default/objects/FieloPLT__Point__c/fields/V_NomeTipoPonto__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTipoPonto__c</fullName>
    <formula>FieloPLT__PointType__r.Name</formula>
    <label>Nome do Tipo de Ponto</label>
    <type>Text</type>
</CustomField>