force-app/main/default/objects/FieloPLT__Point__c/fields/V_Origem__c.field-meta.xml
<CustomField>
    <fullName>V_Origem__c</fullName>
    <formula>IF( FieloPLT__Rule__c != null,  FieloPLT__Rule__r.Name, 

IF( FieloPLT__Transaction__c != null,  TEXT(FieloPLT__Transaction__r.FieloPLT__Type__c), 

IF( FieloPLT__Redemption__c != null,&apos;Lance&apos; , &apos;-&apos;)) )</formula>
    <label>Origem</label>
    <type>Text</type>
</CustomField>