force-app/main/default/objects/FieloPLT__Point__c/fields/V_Promocao__c.field-meta.xml
<CustomField>
    <fullName>V_Promocao__c</fullName>
    <description>Nome da promoção da regra.</description>
    <formula>FieloPLT__Rule__r.FieloPLT__Promotion__r.Name</formula>
    <inlineHelpText>Nome da promoção da regra.</inlineHelpText>
    <label>Promoção</label>
    <type>Text</type>
</CustomField>