force-app/main/default/objects/FieloPLT__Point__c/validationRules/FieloPLT__ValidateStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateStatus</fullName>
    <active>true</active>
    <description>Point status cannot be changed.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(FieloPLT__Status__c) &amp;&amp; ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Approved&apos;)</errorConditionFormula>
    <errorMessage>Point status cannot be changed.</errorMessage>
</ValidationRule>